# QSimov

./: .gitignore  .gitlab-ci.yml  BB84.ipynb  LICENSE  LICENSE.md  Qdeploy.sh  Qtest.py  README.md  Seminario_QSimov.ipynb  USER_GUIDE.md  addLibraryPath.sh  build.bat  publish.bat  pyproject.toml  qalg.py  qlibcj.py  qsimov.py  qtest.py  quarta.py  requirements.txt  results.txt  setup.cfg  setup.py  test.bat  test_nokronecker2.py
.github/workflows/: pythonapp.yml
connectors/: forestapi.py  parser.py  qsimovapi.py
qsimov/: __init__.py  qsimov.py
qsimov/connectors/: drewom.py  forestapi.py  parser.py  qsimovapi.py
qsimov/cores/: bdoki.py
qsimov/samples/: djcircuit.py  fourier.py  state_gate.py
qsimov/structures/: condition.py  funmatrix.py  measure.py  qbase.py  qcircuit.py  qdesign.py  qgate.py  qregistry.py  qstructure.py  qsystem.py  simple_gate.py
qsimov/utils/: bloch.py
structures/: condition.py  funmatrix.py  measure.py  qcircuit.py  qgate.py  qregistry.py  qsystem.py
tests/: density_simulator.py  jfactor.py  qtest.py  qtest_complex.py  shor.py
