[metadata]
name = QSimov
provides = qsimov
version = attr: qsimov.__version__
author = Hernán Indíbil de la Cruz Calvo
author_email = indikalesken@hotmail.com
maintainer = David Davó
maintainer_email = david@ddavo.me
description = QSimov Quantum Framework
license = MIT
license_file = LICENSE
platforms = Linux, Windows
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Mowstyl/QSimov
project_urls =
    Bug Tracker = https://github.com/Mowstyl/QSimov/issues
    Wiki = https://github.com/Mowstyl/QSimov/wiki
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: C
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
python_requires = >= 3.6

# Not necessary if we can compile the C libraries
[options.package_data]
* = lib/*

# [options.packages.find]
# where = .

